filter for zotero output to markdown

--- a/bib/GeneralBackground.bib
+++ b/bib/GeneralBackground.bib
@@ -1,24 +1,11 @@
 
-@misc{asist_board_asist_2001,
+@techreport{asist_board_asist_2001,
 	title = {{ASIST} {Educational} {Guidelines}},
 	url = {http://www.asis.org/Board/educational_guidelines.html},
 	language = {English},
-	journal = {Association for Information Science and Technology},
 	author = {{ASIST Board}},
 	month = nov,
 	year = {2001}
-}
-
-@article{aufderheide_does_2016,
-	title = {‘{Does} {This} {Have} to {Go} through the {IRB}?’},
-	issn = {0009-5982},
-	shorttitle = {‘{Does} {This} {Have} to {Go} through the {IRB}?},
-	url = {http://chronicle.com/article/Does-This-Have-to-Go/237476/},
-	urldate = {2016-08-19TZ},
-	journal = {The Chronicle of Higher Education},
-	author = {Aufderheide, Patricia},
-	month = aug,
-	year = {2016}
 }
 
 @misc{american_library_assocation_knowledge_2006,
@@ -64,4 +51,13 @@ Approved and adopted as policy by the ALA Council, January 27th 2009}
 	author = {Taylor, Arlene and Joudrey, Daniel N.},
 	year = {2009},
 	pages = {1--38}
+}
+
+@misc{sweeney_how_2012,
+	title = {How to {Read} for {Grad} {School}},
+	url = {http://miriamsweeney.net/2012/06/20/readforgradschool/},
+	urldate = {2015-04-15TZ},
+	author = {Sweeney, Miriam E.},
+	month = jun,
+	year = {2012}
 }
