--- a/bib/ResearchBackground.bib
+++ b/bib/ResearchBackground.bib
@@ -71,8 +71,7 @@
 	address = {Santa Barbara, Calif},
 	series = {Library and {Information} {Science} {Text} {Series}},
 	title = {Selecting the {Research} {Method}},
-	isbn = {9781591588634},
-	url = {http://search.ebscohost.com/login.aspx?direct=true&db=nlebk&AN=348676&site=ehost-live},
+	isbn = {978-1-59158-863-4},
 	booktitle = {Basic {Research} {Methods} for {Librarians}},
 	publisher = {Libraries Unlimited},
 	author = {Connaway, Lynn Silipigni and Powell, Ronald R.},
