--- a/bib/ResearchRequired.bib
+++ b/bib/ResearchRequired.bib
@@ -39,3 +39,16 @@
 	year = {1999},
 	pages = {33--37}
 }
+
+@incollection{connaway_selecting_2010,
+	address = {Santa Barbara, Calif},
+	series = {Library and {Information} {Science} {Text} {Series}},
+	title = {Selecting the {Research} {Method}},
+	isbn = {978-1-59158-863-4},
+	booktitle = {Basic {Research} {Methods} for {Librarians}},
+	publisher = {Libraries Unlimited},
+	author = {Connaway, Lynn Silipigni and Powell, Ronald R.},
+	year = {2010},
+	keywords = {LANGUAGE ARTS \& DISCIPLINES / Library \& Information Science / General, Library science--Research--Methodology},
+	pages = {71--106}
+}
