--- a/bib/UseUsersBackground.bib
+++ b/bib/UseUsersBackground.bib
@@ -14,7 +14,6 @@
 	title = {Information {Needs}},
 	volume = {null},
 	isbn = {0-8493-9712-X},
-	url = {http://www.tandfonline.com/doi/abs/10.1081/E-ELIS3-120043243},
 	number = {null},
 	urldate = {2015-05-18},
 	booktitle = {Encyclopedia of {Library} and {Information} {Sciences}, {Third} {Edition}},
@@ -28,8 +27,6 @@
 @article{wilson_information_2008,
 	title = {The information user: past, present and future},
 	volume = {34},
-	url = {http://jis.sagepub.com/content/34/4/457.abstract},
-	doi = {10.1177/0165551508091309},
 	abstract = {The emergence of research on various aspects of `information behaviour' is explored and its growth as a subject of academic research is documented. The origin of the field as a potential aid to the development of library and information services is noted, as is the transition from this status to that of a subject for research at PhD level and beyond. The development of the field has thus led to a division between the needs of academia for theoretically grounded work, and the needs of the field of practice for guidance for service development. There is, today, a disconnection between research and practice, to a significant extent: early research was undertaken by practitioners but today academic research dominates the scene. Suggestions are made as to how this disconnection can be repaired.},
 	number = {4},
 	journal = {Journal of Information Science},
@@ -42,7 +39,6 @@
 @article{miksa_information_2009,
 	title = {Information organization and the mysterious information user},
 	volume = {44},
-	url = {http://www.jstor.org/stable/25549558},
 	number = {3},
 	journal = {Libraries \& the cultural record},
 	author = {Miksa, Francis},
@@ -54,8 +50,6 @@
 	title = {Children's search roles at home: {Implications} for designers, researchers, educators, and parents},
 	volume = {63},
 	issn = {1532-2890},
-	url = {http://dx.doi.org/10.1002/asi.21700},
-	doi = {10.1002/asi.21700},
 	number = {3},
 	journal = {Journal of the American Society for Information Science and Technology},
 	author = {Foss, Elizabeth and Druin, Allison and Brewer, Robin and Lo, Phillip and Sanchez, Luis and Golub, Evan and Hutchinson, Hilary},
@@ -79,8 +73,6 @@
 	title = {Health-related information seeking: {Is} it worth it?},
 	volume = {50},
 	issn = {0306-4573},
-	url = {http://www.sciencedirect.com/science/article/pii/S030645731400048X},
-	doi = {10.1016/j.ipm.2014.06.001},
 	number = {5},
 	journal = {Information Processing \& Management},
 	author = {Johnson, J. David},
@@ -104,7 +96,6 @@
 	title = {Information {Behavior}},
 	volume = {null},
 	isbn = {0-8493-9712-X},
-	url = {http://www.tandfonline.com/doi/full/10.1081/E-ELIS3-120043263},
 	number = {null},
 	urldate = {2015-04-19},
 	booktitle = {Encyclopedia of {Library} and {Information} {Sciences}, {Third} {Edition}},
@@ -119,8 +110,7 @@
 	address = {Santa Barbara, Calif},
 	series = {Library and {Information} {Science} {Text} {Series}},
 	title = {Selecting the {Research} {Method}},
-	isbn = {9781591588634},
-	url = {http://search.ebscohost.com/login.aspx?direct=true&db=nlebk&AN=348676&site=ehost-live},
+	isbn = {978-1-59158-863-4},
 	booktitle = {Basic {Research} {Methods} for {Librarians}},
 	publisher = {Libraries Unlimited},
 	author = {Connaway, Lynn Silipigni and Powell, Ronald R.},
