--- a/bib/LIS501.md
+++ b/bib/LIS501.md
@@ -1,210 +1,110 @@
 <div class="csl-bib-body"
 style="line-height: 1.35; padding-left: 2em; text-indent:-2em;">
 
-<div class="csl-entry">
-
 Adkins, Denice, and Jenny E. Bossaller. “Fiction Access Points across
 Computer-Mediated Book Information Sources: A Comparison of Online
 Bookstores, Reader Advisory Databases, and Public Library Catalogs.”
 *Library & Information Science Research* 29, no. 3 (September 2007):
 354–68. doi:10.1016/j.lisr.2007.03.004.
 
-</div>
-
-<div class="csl-entry">
-
 American Library Assocation. “Knowledge and Competencies Statements
 Developed by Relevant Professional Organizations.” Text. *Education &
 Careers*, August 3–3, 2006.
 http://www.ala.org/educationcareers/careers/corecomp/corecompspecial/knowledgecompetencies.
 
-</div>
-
-<div class="csl-entry">
-
 American Library Association. “ALA’s Core Competences of Librarianship,”
 2009.
 http://www.ala.org/educationcareers/sites/ala.org.educationcareers/files/content/careers/corecomp/corecompetences/finalcorecompstat09.pdf.
-
-</div>
-
-<div class="csl-entry">
 
 Anderson, James Doig, and José Pérez-Carballo. “Library of Congress
 Subject Headings (LCSH).” In *Encyclopedia of Library and Information
 Sciences, Third Edition*, 3392–3405. Taylor & Francis, 2009.
 http://www.tandfonline.com/doi/abs/10.1081/E-ELIS3-120043717.
 
-</div>
-
-<div class="csl-entry">
-
 Asher, Andrew D, Lynda M Duke, and Suzanne Wilson. “Paths of Discovery:
 Comparing the Search Effectiveness of EBSCO Discovery Service, Summon,
 Google Scholar, and Conventional Library Resources.” *College & Research
 Libraries* 74, no. 5 (2013): 464–88. doi:10.5860/crl-374.
 
-</div>
-
-<div class="csl-entry">
-
-ASIST Board. “ASIST Educational Guidelines.” *Association for
-Information Science and Technology*, November 8, 2001.
+ASIST Board. “ASIST Educational Guidelines,” November 8, 2001.
 http://www.asis.org/Board/educational\_guidelines.html.
-
-</div>
-
-<div class="csl-entry">
 
 Aufderheide, Patricia. “‘Does This Have to Go through the IRB?’” *The
 Chronicle of Higher Education*, August 17, 2016.
 http://chronicle.com/article/Does-This-Have-to-Go/237476/.
 
-</div>
-
-<div class="csl-entry">
-
 Barton, Joshua, and Lucas Mak. “Old Hopes, New Possibilities:
 Next-Generation Catalogues and the Centralization of Access.” *Library
 Trends* 61, no. 1 (2012): 83–106. doi:10.1353/lib.2012.0030.
-
-</div>
-
-<div class="csl-entry">
 
 Bates, Jo, and Jennifer Rowley. “Social Reproduction and Exclusion in
 Subject Indexing: A Comparison of Public Library OPACs and LibraryThing
 Folksonomy.” *Journal of Documentation* 67, no. 3 (2011): 431–48.
 http://www.emeraldinsight.com/doi/abs/10.1108/00220411111124532.
 
-</div>
-
-<div class="csl-entry">
-
 Bates, Marcia J. “Information Behavior.” In *Encyclopedia of Library and
 Information Sciences, Third Edition*, null:2381–91. null. Taylor &
 Francis, 2009.
-http://www.tandfonline.com/doi/full/10.1081/E-ELIS3-120043263.
-
-</div>
-
-<div class="csl-entry">
 
 ———. “The Invisible Substrate of Information Science.” *Journal of the
 American Society for Information Science* 50, no. 12 (January 1, 1999):
 1043–50.
 doi:10.1002/(SICI)1097-4571(1999)50:12&lt;1043::AID-ASI1&gt;3.0.CO;2-X.
 
-</div>
-
-<div class="csl-entry">
-
 ———. “What Is Browsing—really? A Model Drawing from Behavioural Science
 Research.” *Information Research* 12, no. 4 (October 2007).
 http://www.informationr.net/ir/12-4/paper330.html.
-
-</div>
-
-<div class="csl-entry">
 
 Bates, J.; Rowley, J. “Social Reproduction and Exclusion in Subject
 Indexing: A Comparison of Public Library OPACs and LibraryThing
 Folksonomy.” *Journal of Documentation* 67, no. 3 (2011): 431–48.
 http://openurl.library.uiuc.edu/sfxlcl3/az.
 
-</div>
-
-<div class="csl-entry">
-
 Bawden, David. “Encountering on the Road to Serendip? Browsing in New
 Information Environments.” In *Innovations in Information Retrieval:
 Perspectives for Theory and Practice London*. London: Facet Publishing,
 2011. https://reserves.library.illinois.edu/.
 
-</div>
-
-<div class="csl-entry">
-
 Bawden, David, and Lyn Robinson. “The Dark Side of Information:
 Overload, Anxiety and Other Paradoxes and Pathologies.” *J. Inf. Sci.*
 35, no. 2 (April 2009): 180–91. doi:10.1177/0165551508095781.
-
-</div>
-
-<div class="csl-entry">
 
 Beghtol, Clare. “Classification Theory.” In *Encyclopedia of Library and
 Information Sciences, Third Edition*, 1045–60. Taylor & Francis, 2009.
 http://www.tandfonline.com/doi/abs/10.1081/E-ELIS3-120043230.
 
-</div>
-
-<div class="csl-entry">
-
 Berger, Arthur Asa. “On the Structure of Genres.” In *Popular Culture
 Genres: Theories and Texts*, 3–12. Thousand Oaks,  CA: Sage, 1992.
 https://reserves.library.illinois.edu/.
-
-</div>
-
-<div class="csl-entry">
 
 Bettels, Jürgen, and F. Avery Bishop. “Unicode: A Universal Character
 Code.” *Digital Tech. J.* 5, no. 3 (June 1993): 21–31.
 http://www.hpl.hp.com/hpjournal/dtj/vol5num3/vol5num3art2.pdf.
 
-</div>
-
-<div class="csl-entry">
-
 Blair, Ann. “Reading Strategies for Coping With Information Overload
 ca.1550-1700.” *Journal of the History of Ideas* 64, no. 1 (2003):
 11–28. doi:10.1353/jhi.2003.0014.
-
-</div>
-
-<div class="csl-entry">
 
 Brown-Sica, Margaret, and Jeffrey Beall. “Library 2.0 and the Problem of
 Hate Speech.” *Electronic Journal of Academic and Special Librarianship*
 9, no. 2 (2008).
 http://southernlibrarianship.icaap.org/content/v09n02/brown-sica\_m01.html.
 
-</div>
-
-<div class="csl-entry">
-
 Buckland, Michael K. “Obsolescence in Subject Description.” *Journal of
 Documentation* 68, no. 2 (2012): 154–61.
 http://www.emeraldinsight.com/doi/abs/10.1108/00220411211209168.
-
-</div>
-
-<div class="csl-entry">
 
 ———. “What Is a ‘document’?” *Journal of the American Society for
 Information Science* 48, no. 9 (September 1, 1997): 804–9.
 doi:10.1002/(SICI)1097-4571(199709)48:9&lt;804::AID-ASI5&gt;3.0.CO;2-V.
 
-</div>
-
-<div class="csl-entry">
-
 Bush, Vannevar. “As We May Think.” *The Atlantic Monthly*, 1945.
 http://www.theatlantic.com/unbound/flashbks/computer/bushf.htm.
-
-</div>
-
-<div class="csl-entry">
 
 Chan, Lois Mai, and Theodora L. Hodges. “Library of Congress
 Classification (LCC).” In *Encyclopedia of Library and Information
 Sciences, Third Edition*, 3383–91. Taylor & Francis, 2009.
 http://www.tandfonline.com/doi/abs/10.1081/E-ELIS3-120043714.
-
-</div>
-
-<div class="csl-entry">
 
 Connaway, Lynn, Timothy Dickey, and Marie Radford. “‘If It Is Too
 Inconvenient I’m Not Going after It:’ Convenience as a Critical Factor
@@ -212,69 +112,36 @@ in Information-Seeking Behaviors.” *Library & Information Science
 Research* 33, no. 3 (2011): 179–90.
 doi:http://dx.doi.org/10.1016/j.lisr.2010.12.002.
 
-</div>
-
-<div class="csl-entry">
-
 Connaway, Lynn Silipigni, and Ixchel M. Faniel. *Reordering Ranganathan:
 Shifting User Behaviors, Shifting Priorities*. Dublin, OH: OCLC
 Research, 2014.
 http://www.oclc.org/content/dam/research/publications/library/2014/oclcresearch-reordering-ranganathan-2014.pdf.
-
-</div>
-
-<div class="csl-entry">
 
 Connaway, Lynn Silipigni, and Ronald R. Powell. *Basic Research Methods
 for Librarians*. Vol. 5th ed. Library and Information Science Text
 Series. Santa Barbara, Calif: ABC-CLIO, 2010.
 http://search.ebscohost.com/login.aspx?direct=true&db=nlebk&AN=348676&site=ehost-live.
 
-</div>
-
-<div class="csl-entry">
-
 ———. “Selecting the Research Method.” In *Basic Research Methods for
 Librarians*, 71–106. Library and Information Science Text Series. Santa
 Barbara, Calif: Libraries Unlimited, 2010.
-http://search.ebscohost.com/login.aspx?direct=true&db=nlebk&AN=348676&site=ehost-live.
-
-</div>
-
-<div class="csl-entry">
 
 Coombs, James H., Allen H. Renear, and Steven J. DeRose. “Markup Systems
 and the Future of Scholarly Text Processing.” *Commun. ACM* 30, no. 11
 (November 1987): 933–47. doi:10.1145/32206.32209.
-
-</div>
-
-<div class="csl-entry">
 
 DeRose, Steven J. “What Do We Still Lack? Or: Prolegomena to Any Future
 Hypertext System.” In *Proceedings of the Symposium on HTML5 and XML*,
 Vol. 14. Balisage Series on Markup Technologies. Washington, DC: Muberry
 Technologies, Inc., 2014. doi:10.4242/BalisageVol14.DeRose01.
 
-</div>
-
-<div class="csl-entry">
-
 Duffy, Eamon P. “Searching HathiTrust: Old Concepts in a New Context.”
 *Partnership: The Canadian Journal of Library and Information Practice
 and Research* 8, no. 1 (June 8, 2013).
 https://journal.lib.uoguelph.ca/index.php/perj/article/view/2503.
 
-</div>
-
-<div class="csl-entry">
-
 Dyson, Freeman. “How We Know.” *The New York Review of Books*, March 10,
 2011. http://www.nybooks.com/articles/archives/2011/mar/10/how-we-know/.
-
-</div>
-
-<div class="csl-entry">
 
 Ferraris, Maurizio. “Social Ontology and Documentality.” In *Approaches
 to Legal Ontologies: Theories, Domains, Methodologies*, edited by
@@ -283,279 +150,143 @@ Fernández-Barrera, 1:83–97. Law, Governance and Technology Series.
 Dordrecht: Springer Netherlands, 2011.
 http://dx.doi.org/10.1007/978-94-007-0120-5\_5.
 
-</div>
-
-<div class="csl-entry">
-
 Fidel, Raya. “Are We There yet?: Mixed Methods Research in Library and
 Information Science.” *Library & Information Science Research* 30, no. 4
 (December 2008): 265–72. doi:10.1016/j.lisr.2008.04.001.
 
-</div>
-
-<div class="csl-entry">
-
 ———. “User-Centered Indexing.” *JASIS* 45, no. 8 (1994): 572–76.
 http://lis571-help.wdfiles.com/local--files/websites/user%20centered%20indexing.pdf.
-
-</div>
-
-<div class="csl-entry">
 
 Fidel, R. “User-Centered Indexing.” *Journal of the American Society for
 Information Science* 45, no. 8 (1994): 572–76.
 http://openurl.library.uiuc.edu/sfxlcl3/az.
 
-</div>
-
-<div class="csl-entry">
-
 Fister, Barbara. “The Dewey Dilemma.” *Library Journal* 134, no. 16
 (2009): 22–25. http://eric.ed.gov/?id=EJ859403.
-
-</div>
-
-<div class="csl-entry">
 
 Foss, Elizabeth, Allison Druin, Robin Brewer, Phillip Lo, Luis Sanchez,
 Evan Golub, and Hilary Hutchinson. “Children’s Search Roles at Home:
 Implications for Designers, Researchers, Educators, and Parents.”
 *Journal of the American Society for Information Science and Technology*
-63, no. 3 (March 1, 2012): 558–73. doi:10.1002/asi.21700.
-
-</div>
-
-<div class="csl-entry">
+63, no. 3 (March 1, 2012): 558–73.
 
 Fuhr, Norbert, Giannis Tsakonas, Trond Aalberg, Maristella Agosti,
 Preben Hansen, Sarantos Kapidakis, Claus-Peter Klas, et al. “Evaluation
 of Digital Libraries.” *International Journal on Digital Libraries* 8,
 no. 1 (2007): 21–38. doi:10.1007/s00799-007-0011-z.
 
-</div>
-
-<div class="csl-entry">
-
 Furner, Jonathan. “Folksonomies.” In *Encyclopedia of Library and
 Information Sciences, Third Edition*, 1858–66. Taylor & Francis, 2009.
 http://www.tandfonline.com/doi/abs/10.1081/E-ELIS3-120043238.
-
-</div>
-
-<div class="csl-entry">
 
 Gerolimos, Michalis. “Tagging for Libraries: A Review of the
 Effectiveness of Tagging Systems for Library Catalogs.” *Journal of
 Library Metadata* 13, no. 1 (2013): 36–58.
 http://www.tandfonline.com/doi/abs/10.1080/19386389.2013.778730.
 
-</div>
-
-<div class="csl-entry">
-
 Gerolimos, M. “Tagging for Libraries: A Review of the Effectiveness of
 Tagging Systems for Library Catalogs.” *Journal of Library Metadata* 13,
 no. 1 (2013): 36–58. http://openurl.library.uiuc.edu/sfxlcl3/az.
-
-</div>
-
-<div class="csl-entry">
 
 Glushko, Robert J. “Activities in Organizing Systems.” In *The
 Discipline of Organizing*, 3rd ed., 97–168. O’Reilly, 2015.
 http://disciplineoforganizing.org/.
 
-</div>
-
-<div class="csl-entry">
-
 ———. “Categorization: Describing Resource Classes and Types.” In *The
 Discipline of Organizing*, 3rd ed., 345–94. O’Reilly, 2015.
 http://disciplineoforganizing.org/.
-
-</div>
-
-<div class="csl-entry">
 
 ———. “Classification: Assigning Resources to Categories.” In *The
 Discipline of Organizing*, 3rd ed., 395–446. O’Reilly, 2015.
 http://disciplineoforganizing.org/.
 
-</div>
-
-<div class="csl-entry">
-
 ———. “Describing Relationships and Structures.” In *The Discipline of
 Organizing*, 3rd ed., 295–344. O’Reilly, 2015.
 http://disciplineoforganizing.org/.
-
-</div>
-
-<div class="csl-entry">
 
 ———. “Foundation for Organizing Systems.” In *The Discipline of
 Organizing*, 3rd ed., 33–96. O’Reilly, 2015.
 http://disciplineoforganizing.org/.
 
-</div>
-
-<div class="csl-entry">
-
 ———. “Interactions with Resources.” In *The Discipline of Organizing*,
 3rd ed., 499–542. O’Reilly, 2015. http://disciplineoforganizing.org/.
-
-</div>
-
-<div class="csl-entry">
 
 ———. “Resource Description and Metadata.” In *The Discipline of
 Organizing*, 3rd ed., 231–94. O’Reilly, 2015.
 http://disciplineoforganizing.org/.
 
-</div>
-
-<div class="csl-entry">
-
 ———. “Resources in Organizing Systems.” In *The Discipline of
 Organizing*, 3rd ed., 169–230. O’Reilly, 2015.
 http://disciplineoforganizing.org/.
 
-</div>
-
-<div class="csl-entry">
-
 ———. *The Discipline of Organizing*. Cambridge, MA: The MIT Press, 2013.
 http://disciplineoforganizing.org.
-
-</div>
-
-<div class="csl-entry">
 
 ———. “The Forms of Resource Description.” In *The Discipline of
 Organizing*, 3rd ed., 447–98. O’Reilly, 2015.
 http://disciplineoforganizing.org/.
 
-</div>
-
-<div class="csl-entry">
-
 ———. “The Organizing System: Roadmap.” In *The Discipline of
 Organizing*, 3rd ed., 543–70. O’Reilly, 2015.
 http://disciplineoforganizing.org/.
 
-</div>
-
-<div class="csl-entry">
-
 Gorman, Michael. “Authority Control in the Context of Bibliographic
 Control in the Electronic Environment.” *Cataloging & Classification
 Quarterly* 38, no. 3–4 (2004): 11–22. doi:10.1300/J104v38n03\_03.
-
-</div>
-
-<div class="csl-entry">
 
 Gossen, Tatiana, and Andreas Nürnberger. “Specifics of Information
 Retrieval for Young Users: A Survey.” *Information Processing &
 Management* 49, no. 4 (July 2013): 739–56.
 doi:10.1016/j.ipm.2012.12.006.
 
-</div>
-
-<div class="csl-entry">
-
 Hadro, J. “What’s the Problem with Self-Publishing?” *Library Journa*
 138, no. 7 (2013): 34–36.
 http://lj.libraryjournal.com/2013/04/publishing/whats-the-
 problem-with-self-publishing/.
 
-</div>
-
-<div class="csl-entry">
-
 Hearst, Marti A. “The Evaluation of Search User Interfaces.” In *Search
 User Interfaces*. Cambridge: Cambridge University Press, 2009.
 http://searchuserinterfaces.com/book/sui\_ch2\_evaluation.html.
-
-</div>
-
-<div class="csl-entry">
 
 Higgins, Colin. “Library of Congress Classification: Teddy Roosevelt’s
 World in Numbers?” *Cataloging & Classification Quarterly* 50, no. 4
 (2012): 249–62.
 http://www.tandfonline.com/doi/abs/10.1080/01639374.2012.658989.
 
-</div>
-
-<div class="csl-entry">
-
 Hunter, N. C., Legg, and J.B. Oehlerts. “Two Librarians, an Archivist,
 and 13,000 Images: Collaborating to Build a Digital Collection.”
 *Library Quarterly* 80, no. 1 (1981): 81–103. doi:10.1086/648464.
-
-</div>
-
-<div class="csl-entry">
 
 Hyder, Eileen Mary. “Reading Groups and Social Justice.” In *Reading
 Groups, Libraries and Social Inclusion: Experiences of Blind and
 Partially Sighted People*, 49–63. Farnham, Surrey, England : Burlington,
 VT: Ashgate Publishing, Ltd., 2014.
 
-</div>
-
-<div class="csl-entry">
-
 Jaeger, Paul T., Mega M Subramaniam, Cassandra B. Jones, and John Carlo
 Bertot. “Diversity and LIS Education: Inclusion and the Age of
 Information.” *Journal of Education for Library and Information Science*
 52, no. 3 (July 1, 2011): 166–83. doi:10.2307/41308894.
 
-</div>
-
-<div class="csl-entry">
-
 Johnson, J. David. “Health-Related Information Seeking: Is It Worth It?”
 *Information Processing & Management* 50, no. 5 (September 2014):
-708–17. doi:10.1016/j.ipm.2014.06.001.
-
-</div>
-
-<div class="csl-entry">
+708–17.
 
 Junus, Ranti. “Digital Collections and Accessibility.” MSU Libraries
 Blogs. *Digital Scholarship Collaborative Sandbox*, November 11–14,
 2014.
 http://blogpublic.lib.msu.edu/index.php/dscsandbox/digital-collection-and-accessibility.
 
-</div>
-
-<div class="csl-entry">
-
 Kennedy, M.R. “Nine Questions to Guide You in Choosing a Metadata
 Schema.” *Journal of Digital Information* 9, no. 1 (2008).
 http://journals.tdl.org/jodi/article/view/226/205.
-
-</div>
-
-<div class="csl-entry">
 
 Kreyche, Michael. “Subject Headings in Spanish: The Lcsh-Es. Org
 Bilingual Database.” *Cataloging & Classification Quarterly* 51, no. 4
 (2013): 389–403.
 http://www.tandfonline.com/doi/abs/10.1080/01639374.2012.740610.
 
-</div>
-
-<div class="csl-entry">
-
 Lavoie, Brian, Lorcan Dempsey, and Lynn Silipigni Connaway. “Making Data
 Work Harder.” *Library Journal* 131, no. 1 (January 1, 2006): 40–42.
-
-</div>
-
-<div class="csl-entry">
 
 Lee, Deborah. “Indigenous Knowledge Organization: A Study of Concepts,
 Terminology, Structure and (Mostly) Indigenous Voices.” *Partnership:
@@ -563,197 +294,99 @@ The Canadian Journal of Library and Information Practice and Research*
 6, no. 1 (July 3, 2011).
 https://journal.lib.uoguelph.ca/index.php/perj/article/view/1427.
 
-</div>
-
-<div class="csl-entry">
-
 Levie, Françoise., and Sofidoc Productions. *The Man Who Wanted to
 Classify the World*, 2004.
-
-</div>
-
-<div class="csl-entry">
 
 Lewis, D. W. “From Stacks to the Web: The Transformation of Academic
 Library Collecting.” *College & Research Libraries* 14, no. 2 (2013):
 159–76. doi:10.5860/crl-309.
 
-</div>
-
-<div class="csl-entry">
-
 Marcia J. Bates. “Information.” In *Encyclopedia of Library and
 Information Sciences, Third Edition*, null:2347–60. null. Taylor &
 Francis, 2009.
-
-</div>
-
-<div class="csl-entry">
 
 Maxwell, R.L. “Bibliographic Control. 497-505.” *Encyclopedia of Library
 and Information Sciences,* 2010.
 http://www.library.illinois.edu/lsx/findit/tools/encyclopedias.html.
 
-</div>
-
-<div class="csl-entry">
-
 Miksa, Francis. “Information Organization and the Mysterious Information
 User.” *Libraries & the Cultural Record* 44, no. 3 (2009): 343–70.
-http://www.jstor.org/stable/25549558.
-
-</div>
-
-<div class="csl-entry">
 
 Mitchell, Joan S., and Diane Vizine-Goetz. “Dewey Decimal Classification
 (DDC).” In *Encyclopedia of Library and Information Sciences, Third
 Edition*, 1507–17. Taylor & Francis, 2009.
 http://www.tandfonline.com/doi/abs/10.1081/E-ELIS3-120043240.
 
-</div>
-
-<div class="csl-entry">
-
 Naumer, Charles M., and Karen E. Fisher. “Information Needs.” In
 *Encyclopedia of Library and Information Sciences, Third Edition*,
 null:2452–58. null. Taylor & Francis, 2009.
-http://www.tandfonline.com/doi/abs/10.1081/E-ELIS3-120043243.
-
-</div>
-
-<div class="csl-entry">
 
 Nitecki, Danuta A. “Changing the Concept and Measure of Service Quality
 in Academic Libraries.” *The Journal of Academic Librarianship* 22, no.
 3 (January 1, 1996): 181–90. doi:10.1016/S0099-1333(96)90056-7.
 
-</div>
-
-<div class="csl-entry">
-
 Nodelman, Perry. “We Are All Censors.” *Canadian Children’s Literature /
 Littérature Canadienne Pour La Jeunesse* 0, no. 0 (28–12, 2007): 121.
 http://ccl.freeculture.ca/index.php/ccl-lcj/article/view/2799.
 
-</div>
-
-<div class="csl-entry">
-
 Olson, Hope A. “The Power to Name: Representation in Library Catalogs.”
 *Signs* 26, no. 3 (2001): 639–68. http://www.jstor.org/stable/3175535.
-
-</div>
-
-<div class="csl-entry">
 
 Saarinen, Katariina, and Pertti Vakkari. “A Sign of a Good Book:
 Readers’ Methods of Accessing Fiction in the Public Library.” *Journal
 of Documentation* 69, no. 5 (September 2, 2013): 736–54.
 doi:10.1108/JD-04-2012-0041.
 
-</div>
-
-<div class="csl-entry">
-
 Sandstrom, Alan R., and Pamela Effrein Sandstrom. “The Use and Misuse of
 Anthropological Methods in Library and Information Science Research.”
 *The Library Quarterly: Information, Community, Policy* 65, no. 2
 (1995): 161–99. http://www.jstor.org/stable/4309020.
 
-</div>
-
-<div class="csl-entry">
-
 Shachaf, Pnina, and Sarah Horowitz. “Are Virtual Reference Services
 Color Blind?” *Library & Information Science Research* 28, no. 4 (2006):
 501–20. doi:10.1016/j.lisr.2006.08.009.
-
-</div>
-
-<div class="csl-entry">
 
 Shilton, Katie, and Ramesh Srinivasan. “Participatory Appraisal and
 Arrangement for Multicultural Archival Collections.” *Archivaria* 63
 (2007): 87.
 http://rameshsrinivasan.org/wordpress/wp-content/uploads/2010/03/8-Final-ShiltonSrinivasan-Archivaria.pdf.
 
-</div>
-
-<div class="csl-entry">
-
 Sutton, Brett. “Qualitative Research Methods in Library and Information
 Science \[ELIS Classic\].” In *Encyclopedia of Library and Information
 Sciences, Third Edition*, null:4380–93. null. Taylor & Francis, 2009.
 http://dx.doi.org/10.1081/E-ELIS3-120044785.
 
-</div>
-
-<div class="csl-entry">
-
 Sweeney, Miriam E. “How to Read for Grad School,” June 20, 2012.
 http://miriamsweeney.net/2012/06/20/readforgradschool/.
-
-</div>
-
-<div class="csl-entry">
 
 Swoger, B. “What Is Metadata? A Christmas-Themed Exploration. Info
 Culture.” *Scientific American*, 2012.
 http://blogs.scientificamerican.com/information-
 culture/2012/12/17/what-is-metadata-a-christmas-themed-exploration/.
 
-</div>
-
-<div class="csl-entry">
-
 Taylor, Arlene, and Daniel N. Joudrey. “Appendix A. An Approach to
 Subject Analysis.” In *The Organization of Information*, 3rd ed.,
 419–27. Westport, Conn: Libraries Unlimited, 2009.
-
-</div>
-
-<div class="csl-entry">
 
 ———. “Development of the Organization of Recorded Information in Western
 Civilization.” In *The Organization of Information*, 3rd ed., 67–87.
 Westport, Conn: Libraries Unlimited, 2009.
 
-</div>
-
-<div class="csl-entry">
-
 ———. “Organization of Recorded Information.” In *The Organization of
 Information*, 3rd ed., 1–38. Westport, Conn: Libraries Unlimited, 2009.
-
-</div>
-
-<div class="csl-entry">
 
 Teper, Jennifer Hain. “Selection for Preservation.” *Library Resources &
 Technical Services* 58, no. 4 (October 2014): 220–32.
 http://search.ebscohost.com/login.aspx?direct=true&db=a9h&AN=99263271&site=ehost-live.
 
-</div>
-
-<div class="csl-entry">
-
 “Update on the Twitter Archive at the Library of Congress.” Library of
 Congress, 2013.
 http://www.loc.gov/today/pr/2013/files/twitter\_report\_2013jan.pdf.
-
-</div>
-
-<div class="csl-entry">
 
 Vogt, Lars. “eScience and the Need for Data Standards in the Life
 Sciences: In Pursuit of Objectivity rather than Truth.” *Systematics and
 Biodiversity* 11, no. 3 (September 1, 2013): 257–70.
 doi:10.1080/14772000.2013.818588.
-
-</div>
-
-<div class="csl-entry">
 
 Voorhees, EllenM. “The Philosophy of Information Retrieval Evaluation.”
 In *Evaluation of Cross-Language Information Retrieval Systems*, edited
@@ -761,61 +394,30 @@ by Carol Peters, Martin Braschler, Julio Gonzalo, and Michael Kluck,
 2406:355–70. Lecture Notes in Computer Science. Springer Berlin
 Heidelberg, 2002. http://dx.doi.org/10.1007/3-540-45691-0\_34.
 
-</div>
-
-<div class="csl-entry">
-
 Walliman, Nicholas. “Defining the Research Problem.” In *Social Research
 Methods*, 67–74. London: SAGE Publications, Ltd, 2006.
 http://methods.sagepub.com/book/social-research-methods.
 
-</div>
-
-<div class="csl-entry">
-
 Warren, John. “(2015) Zen and the Art of Metadata Maintenance.” *Journal
 of Electronic Publishing* 18, no. 3 (2015).
 http://dx.doi.org/10.3998/3336451.0018.305.
-
-</div>
-
-<div class="csl-entry">
 
 Weinberg, Bella Hass. “Indexing: History and Theory.” In *Encyclopedia
 of Library and Information Sciences, Third Edition*, 2277–90. Taylor &
 Francis, 2009.
 http://www.tandfonline.com/doi/abs/10.1081/E-ELIS3-120044374.
 
-</div>
-
-<div class="csl-entry">
-
 Whitmire, Ethelene. “Racial Differences in the Academic Library
 Experiences of Undergraduates.” *The Journal of Academic Librarianship*
 25, no. 1 (January 1, 1999): 33–37. doi:10.1016/S0099-1333(99)80173-6.
 
-</div>
-
-<div class="csl-entry">
-
 Wilson, Tom. “The Information User: Past, Present and Future.” *Journal
 of Information Science* 34, no. 4 (August 1, 2008): 457–64.
-doi:10.1177/0165551508091309.
-
-</div>
-
-<div class="csl-entry">
 
 Wright, Alex. *Cataloging the World: Paul Otlet and the Birth of the
 Information Age*. Oxford: Oxford University Press, 2014.
 
-</div>
-
-<div class="csl-entry">
-
 ———. “The Secret History of Hypertext — The Atlantic,” May 22, 2014.
 http://www.theatlantic.com/technology/archive/2014/05/in-search-of-the-proto-memex/371385/.
-
-</div>
 
 </div>
