readings update,  syllabus update

--- a/bib/ApproachesRequired.bib
+++ b/bib/ApproachesRequired.bib
@@ -1,4 +1,21 @@
 
+@article{tillett_what_2005,
+	title = {What is {FRBR}? {A} conceptual model for the bibliographic universe},
+	volume = {54},
+	issn = {0004-9670},
+	shorttitle = {What is {FRBR}?},
+	url = {http://dx.doi.org/10.1080/00049670.2005.10721710},
+	doi = {10.1080/00049670.2005.10721710},
+	abstract = {From 1992 to 1995 the IFLA Study Group on Functional Requirements for Bibliographic Records (FRBR) developed an entity relationship model as a generalised view of the bibliographic universe, intended to be independent of any cataloguing code or implementation. The FRBR report itself includes a description of the conceptual model (the entities, relationships, and attributes or metadata as we would call them today), a proposed national level bibliographic record for all types of materials, and user tasks associated with the bibliographic resources described in catalogues, bibliographies, and other bibliographic tools. IFLA continues to monitor the application of FRBR and promotes its use and evolution. The IFLA Cataloguing Section’s Working Group on FRBR, chaired by Patrick LeBœuf, has an active online discussion list and a website at http://www.ifla.org/VII/s13/wgfrbr/wgfrbr.htm. The website includes presentations, training tools, a hot-linked bibliography, and much more.},
+	number = {1},
+	urldate = {2016-08-22TZ},
+	journal = {The Australian Library Journal},
+	author = {Tillett, Dr Barbara},
+	month = feb,
+	year = {2005},
+	pages = {24--30}
+}
+
 @article{kennedy_nine_2008,
 	title = {Nine questions to guide you in choosing a metadata schema.},
 	volume = {9},
