--- a/bib/EvaluationBackground.bib
+++ b/bib/EvaluationBackground.bib
@@ -1,4 +1,9 @@
 
+@misc{_weave:_????,
+	title = {Weave: {Journal} of {Library} {User} {Experience}},
+	url = {http://weaveux.org/}
+}
+
 @article{fuhr_evaluation_2007,
 	title = {Evaluation of digital libraries},
 	volume = {8},
