--- a/bib/EvaluationRequired.bib
+++ b/bib/EvaluationRequired.bib
@@ -1,4 +1,17 @@
 
+@article{gross_imposed_1998,
+	title = {The {Imposed} {Query}: {Implications} for {Library} {Service} {Evaluation}},
+	volume = {37},
+	issn = {10949054, 21635242},
+	url = {http://www.jstor.org/stable/20863331},
+	abstract = {Evaluation is a process that depends on the reappraisal of its various methodologies to remain responsive to new techniques, new services, and new insights in the field. It is the purpose of this article to explore the possible impact of a new model of information-seeking behavior, the imposed query, on current approaches to library service and system evaluation. The areas considered are reference service evaluation, user studies, output measures, and relevance as an evaluation tool. Each section explores the implications of the imposed query model for research and practice and offers suggestions for incorporating the imposed query into these evaluation efforts. It is believed that inclusion of the imposed query in current methodology will broaden understanding of the user and the role that information organizations play in users' information-seeking behavior.},
+	number = {3},
+	journal = {Reference \& User Services Quarterly},
+	author = {Gross, Melissa},
+	year = {1998},
+	pages = {290--299}
+}
+
 @article{nitecki_changing_1996,
 	title = {Changing the concept and measure of service quality in academic libraries},
 	volume = {22},
