--- a/bib/ResearchRequired.bib
+++ b/bib/ResearchRequired.bib
@@ -1,4 +1,15 @@
 
+@misc{underwood_real_2016,
+	title = {The real problem with distant reading.},
+	url = {https://tedunderwood.com/2016/05/29/the-real-problem-with-distant-reading/},
+	abstract = {Critics of distant reading often worry that it won’t leave room for uncertainty and complexity. If only the problem were that simple!},
+	urldate = {2016-08-22TZ},
+	journal = {The Stone and the Shell},
+	author = {Underwood, Ted},
+	month = may,
+	year = {2016}
+}
+
 @article{aufderheide_does_2016,
 	title = {‘{Does} {This} {Have} to {Go} through the {IRB}?’},
 	issn = {0009-5982},
