--- a/bib/SearchBackground.bib
+++ b/bib/SearchBackground.bib
@@ -1,4 +1,26 @@
 
+@techreport{maloney_expecting_2016,
+	title = {Expecting the {Unexpected}: {Serendipity}, {Discovery}, and the {Scholarly} {Research} {Process}},
+	institution = {SAGE Publishing},
+	author = {Maloney, Alan and Conrad, Lettie Y.},
+	year = {2016}
+}
+
+@article{breeding_serendipity:_2015,
+	title = {Serendipity: {The} {Virtual}-{Library} {Experience}},
+	volume = {35},
+	shorttitle = {Serendipity},
+	url = {http://librarytechnology.org/repository/item.pl?id=21506},
+	abstract = {Article: Breeding, Marshall. Serendipity: The Virtual-Library Experience.  Libraries must accommodate a variety of expectations from the patrons who visit their physical facilities or virtual offerings. One dimension of this experience relates to satisfying those with something specific in mind. These patrons may have a favorite author or topic in mind and want specific resources, which might include the next book by that author or an exhaustive set of materials in the bibliography of a research topic. The catalogs and discovery services that libraries present to their users are designed especially for these kinds of information fulfillment activities.},
+	number = {9},
+	urldate = {2016-08-22TZ},
+	journal = {Computers in Libraries},
+	author = {Breeding, Marshall},
+	month = nov,
+	year = {2015},
+	pages = {9--11}
+}
+
 @article{gossen_specifics_2013,
 	title = {Specifics of information retrieval for young users: {A} survey},
 	volume = {49},
