--- a/bib/SearchRequired.bib
+++ b/bib/SearchRequired.bib
@@ -1,4 +1,39 @@
 
+@article{liu_library_2015,
+	title = {A {Library} in the {Palm} of {Your} {Hand}: {Mobile} {Services} in {Top} 100 {University} {Libraries}},
+	volume = {34},
+	copyright = {Copyright American Library Association Jun 2015},
+	shorttitle = {A {Library} in the {Palm} of {Your} {Hand}},
+	url = {http://search.proquest.com/docview/1691586122/abstract/E2DA6917D1EC48ECPQ/1},
+	abstract = {What is the current state of mobile services among academic libraries of the country's top 100 universities, and what are the best practices for librarians implementing mobile services at the university level? Through in-depth website visits and survey questionnaires, the authors studied each of the top 100 universities' libraries' experiences with mobile services. Results showed that all of these libraries offered at least one mobile service, and the majority offered multiple services. The most common mobile services offered were mobile sites, text messaging services, e-books, and mobile access to databases and the catalog. In addition, chat/IM services, social media accounts and apps were very popular. Survey responses also indicated a trend towards responsive design for websites so that patrons can access the library's full site on any mobile device. Respondents recommend that libraries considering offering mobile services begin as soon as possible as patron demand for these services is expected to increase.},
+	language = {English},
+	number = {2},
+	urldate = {2016-08-22TZ},
+	journal = {Information Technology and Libraries (Online)},
+	author = {Liu, Yan Quan and Briggs, Sarah},
+	month = jun,
+	year = {2015},
+	keywords = {Academic libraries, Library And Information Sciences, Mobile communications networks, Studies, Value added},
+	pages = {133--148}
+}
+
+@article{behnert_ranking_2015,
+	title = {Ranking {Search} {Results} in {Library} {Information} {Systems} — {Considering} {Ranking} {Approaches} {Adapted} {From} {Web} {Search} {Engines}},
+	volume = {41},
+	issn = {0099-1333},
+	url = {http://www.sciencedirect.com/science/article/pii/S0099133315001585},
+	doi = {10.1016/j.acalib.2015.07.010},
+	abstract = {For an information retrieval system to be successful, it must have the ability to rank search results. As web search engines are the most often used and — in terms of ranking functionality — the most advanced existing systems, the principles they are based on and the strategies they use can be advantageous when applied to the library context. We categorize ranking factors into six different groups: 1. text statistics, 2. popularity, 3. freshness, 4. locality and availability, 5. content properties and 6. user background. We discuss the basic concepts and assumptions these ranking factors involve and offer potential implementations in the library context. The practice recommended here is for libraries to not only apply selected ranking factors — as existing library information systems already do — but to systematically test for the ranking factors best suited to their systems. We argue for a user-centric view on ranking, because in the end, ranking should be for the benefit of the user, and user preferences may vary across different contexts.},
+	number = {6},
+	urldate = {2016-08-22TZ},
+	journal = {The Journal of Academic Librarianship},
+	author = {Behnert, Christiane and Lewandowski, Dirk},
+	month = nov,
+	year = {2015},
+	keywords = {Library information systems, OPAC, Ranking factors, Relevance ranking, Search results},
+	pages = {725--735}
+}
+
 @article{saarinen_sign_2013,
 	title = {A sign of a good book: readers’ methods of accessing fiction in the public library},
 	volume = {69},
