--- a/bib/StructuresRequired.bib
+++ b/bib/StructuresRequired.bib
@@ -35,7 +35,7 @@
 	url = {http://doi.acm.org.proxy2.library.illinois.edu/10.1145/32206.32209},
 	doi = {10.1145/32206.32209},
 	number = {11},
-	journal = {Commun. ACM},
+	journal = {Communications of the ACM},
 	author = {Coombs, James H. and Renear, Allen H. and DeRose, Steven J.},
 	month = nov,
 	year = {1987},
