--- a/bib/UseUsersBackground.bib
+++ b/bib/UseUsersBackground.bib
@@ -1,4 +1,17 @@
 
+@incollection{marcia_j._bates_information_2009,
+	title = {Information {Behavior}},
+	isbn = {978-0-8493-9712-7},
+	url = {http://www.crcnetbase.com/doi/full/10.1081/E-ELIS3-120043263},
+	urldate = {2016-08-22TZ},
+	booktitle = {Encyclopedia of {Library} and {Information} {Sciences}, {Third} {Edition}},
+	publisher = {CRC Press},
+	author = {{Marcia J. Bates}},
+	month = dec,
+	year = {2009},
+	pages = {2381--2391}
+}
+
 @incollection{glushko_interactions_2015,
 	edition = {3rd},
 	title = {Interactions with {Resources}},
@@ -90,20 +103,6 @@
 	publisher = {OCLC Research},
 	author = {Connaway, Lynn Silipigni and Faniel, Ixchel M.},
 	year = {2014}
-}
-
-@incollection{bates_information_2009,
-	title = {Information {Behavior}},
-	volume = {null},
-	isbn = {0-8493-9712-X},
-	number = {null},
-	urldate = {2015-04-19},
-	booktitle = {Encyclopedia of {Library} and {Information} {Sciences}, {Third} {Edition}},
-	publisher = {Taylor \& Francis},
-	author = {Bates, Marcia J.},
-	month = dec,
-	year = {2009},
-	pages = {2381--2391}
 }
 
 @incollection{connaway_selecting_2010,
