--- a/bib/UseUsersRequired.bib
+++ b/bib/UseUsersRequired.bib
@@ -1,6 +1,35 @@
 
+@article{rhee_reflections_2015,
+	title = {Reflections on archival user studies},
+	volume = {54},
+	number = {4},
+	journal = {Reference \& User Services Quarterly},
+	author = {Rhee, Hea Lim},
+	year = {2015},
+	pages = {29--42}
+}
+
+@article{la_barre_elusive_2012,
+	title = {The elusive tale: leveraging the study of information seeking and knowledge organization to improve access to and discovery of folktales},
+	volume = {63},
+	issn = {1532-2890},
+	shorttitle = {The elusive tale},
+	url = {http://onlinelibrary.wiley.com/doi/10.1002/asi.21710/abstract},
+	doi = {10.1002/asi.21710},
+	abstract = {The “Folktales and Facets” project proposes ways to enhance access to folktales—in written and audiovisual formats—through the systematic and rigorous development of user-focused and task-focused models of information representation. Methods used include cognitive task analysis and facet analysis to better understand the information-seeking and information-use practices of people working with folktales and the intellectual dimensions of the domain. Interviews were conducted with 9 informants, representing scholars, storytellers, and teachers who rely on folktales in their professional lives to determine common tasks across user groups. Four tasks were identified: collect, create, instruct, and study. Facet analysis was conducted on the transcripts of these interviews, and a representative set of literature that included subject indexing material and a random stratified set of document surrogates drawn from a collection of folktales, including bibliographic records, introductions, reviews, tables of contents, and bibliographies. Eight facets were identified as most salient for this group of users: agent, association, context, documentation, location, subject, time, and viewpoint. Implications include the need for systems designers to devise methods for harvesting and integrating extant contextual material into search and discovery systems, and to take into account user-desired features in the development of enhanced services for digital repositories.},
+	language = {en},
+	number = {4},
+	urldate = {2016-08-22TZ},
+	journal = {Journal of the American Society for Information Science and Technology},
+	author = {La Barre, Kathryn A. and Tilley, Carol L.},
+	month = apr,
+	year = {2012},
+	keywords = {facet analysis, information discovery},
+	pages = {687--701}
+}
+
 @article{connaway_if_2011,
-	title = {"'{If} it is too inconvenient {I}'m not going after it:' {Convenience} as a critical factor in information-seeking behaviors"},
+	title = {"{If} it is too inconvenient {I}'m not going after it:" {Convenience} as a critical factor in information-seeking behaviors},
 	volume = {33},
 	url = {http://sfx.carli.illinois.edu/sfxuiu/az},
 	doi = {http://dx.doi.org/10.1016/j.lisr.2010.12.002},
