--- a/bib/CollectionsBackground.bib
+++ b/bib/CollectionsBackground.bib
@@ -1,4 +1,16 @@
 
+@article{lee_what_2000,
+	title = {What is a collection?},
+	volume = {51},
+	url = {http://onlinelibrary.wiley.com/doi/10.1002/1097-4571(2000)9999:9999%3C::AID-ASI1018%3E3.0.CO;2-T/full},
+	number = {12},
+	urldate = {2016-08-22TZ},
+	journal = {Journal of the American Society for Information Science},
+	author = {Lee, Hur-Li},
+	year = {2000},
+	pages = {1106--1113}
+}
+
 @misc{junus_digital_2014,
 	type = {{MSU} {Libraries} {Blogs}},
 	title = {Digital {Collections} and {Accessibility}},
